add initial batch of images

--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <html>
 	<head>
 		<title>Pics</title>
-	</head>
+		<script src="metadata.js"></script>
+		<link href="entireframework.min.css" rel="stylesheet" type="text/css" />
+		<link href="main.css" rel="stylesheet" type="text/css" />
+		<script src="mousetrap.min.js"></script>
+		</head>
 	<body>
+		<div id="fullscreen">
+			<h2 id="title">Title</h2><h5 id="description">Description</h5>
+			<div id="imgcontainer"><span class="helper"></span><img id="img" src=""></div>
+		</div>
+		<div id="thumbnails">
+		</div>
 		<script src="main.js"></script>
 	</body>
 </html>
