GH pages being screwy

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Pics</title>
+		<title>Photos</title>
 		<script src="metadata.js"></script>
 		<link href="entireframework.min.css" rel="stylesheet" type="text/css" />
 		<link href="main.css" rel="stylesheet" type="text/css" />
@@ -14,6 +14,6 @@
 		</div>
 		<div id="thumbnails">
 		</div>
-		<script src="main.js"></script>
+		<script src="main.js?rand=1"></script>
 	</body>
 </html>
